html 두 번째 커밋
css 수정

--- a/a.html
+++ b/a.html
@@ -23,16 +23,16 @@
       }
       .container {
         background-color: orange;
+        display: flex;
+        justify-content: center;
       }
       #header {
         border-radius: 10px 10px 0 0;
-        display: flex;
-        justify-content: center;
+
       }
-      div > input {
+      #doList #addList {
         margin: 40px;
-        display: flex;
-        justify-content: center;
+
       }
     </style>
   </head>
