--- a/a.html
+++ b/a.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+<style></style>
     <script>
       const checkBtn = document.createAttribute('input');
       checkBtn.setAttribute('type', 'checkbox');
